# cmd/porodnica-api-service/main.go
@@ -5,8 +5,13 @@ import (
 	"os"
 	"strings"
 
+	"context"
+	"time"
+
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/tessyelots/porodnica-webapi/api"
+	"github.com/tessyelots/porodnica-webapi/internal/db_service"
 	"github.com/tessyelots/porodnica-webapi/internal/porodnica_ambulance_home"
 )
 
@@ -22,9 +27,27 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[porodnica_ambulance_home.Porodnica](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
 	// request routings
 	handleFunctions := &porodnica_ambulance_home.ApiHandleFunctions{
 		PorodnicaWaitingListAPI: porodnica_ambulance_home.NewPorodnicaWaitingListApi(),
+		PorodniceAPI:            porodnica_ambulance_home.NewPorodniceApi(),
 	}
 	porodnica_ambulance_home.NewRouterWithGinEngine(engine, *handleFunctions)
 	engine.GET("/openapi", api.HandleOpenApi)
