# internal/porodnica_ambulance_home/model_porodnica.go
@@ -1,0 +1,24 @@
+/*
+ * Waiting List Api
+ *
+ * Porodnica Waiting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xsmutny@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package porodnica_ambulance_home
+
+type Porodnica struct {
+
+	// Unique identifier of the porodnica
+	Id string `json:"id"`
+
+	// Human readable display name of the porodnica
+	Name string `json:"name"`
+
+	RoomNumber string `json:"roomNumber"`
+
+	WaitingList []WaitingListEntry `json:"waitingList,omitempty"`
+}
